--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,18 @@
     box-sizing: border-box;
 }
 
-.temp {
-    color: red;
+.canvas {
+    border: 1px solid black;
+    display: inline-block;
+}
+
+.row {
+    display: flex;
+    gap: 1rem;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
